# discrete-analys

./: .gitignore  README.md
lab1/: .gitignore  CMakeLists.txt  a.out  generator.cpp  main.cpp  std_sort.cpp
lab1/include/: car_number.hpp  my_pair.hpp  my_vector.hpp
lab1/src/: car_number.cpp
